# Crystals

./: LICENSE  README.md
crystals/: Cargo.toml
crystals-program/: Cargo.toml
crystals-program/src/: errors.rs  lib.rs
crystals-program/src/instructions/: init_vault_accounts.rs  mod.rs
crystals-program/src/states/: mod.rs  vault.rs
crystals/src/: api.rs  fips202.rs  lib.rs  packing.rs  params.rs  poly.rs  polyvec.rs  randombytes.rs  rounding.rs  sign.rs  symmetric.rs
